test/sematest/invalid/invalid_condition3.java
class A {
  public static void main(String[] args) {
    while (new A()){
      System.out.println(3);
    }
  }
}